[Add]: pinout [Add]: LED test

--- a/TX/TX/TX.vcxproj
+++ b/TX/TX/TX.vcxproj
@@ -82,6 +82,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Pinout.h" />
     <ClInclude Include="__vm\.TX.vsarduino.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
