--- a/TX/TX/TX.vcxproj.filters
+++ b/TX/TX/TX.vcxproj.filters
@@ -24,5 +24,13 @@
     <ClInclude Include="Pinout.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Button.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Button.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
