[Add]: battery class

--- a/TX/TX/TX.vcxproj
+++ b/TX/TX/TX.vcxproj
@@ -86,11 +86,14 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Battery.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="Config.h" />
     <ClInclude Include="Pinout.h" />
     <ClInclude Include="__vm\.TX.vsarduino.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Battery.cpp" />
     <ClCompile Include="Button.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
