[Add]: test. communication using COBS

--- a/TX/TX/TX.vcxproj.filters
+++ b/TX/TX/TX.vcxproj.filters
@@ -33,6 +33,15 @@
     <ClInclude Include="Config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\RX5\RX\RX\cobs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\RX5\RX\RX\Comm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\RX5\RX\RX\Sarray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Button.cpp">
@@ -40,6 +49,9 @@
     </ClCompile>
     <ClCompile Include="Battery.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\RX5\RX\RX\Comm.cpp">
+      <Filter>Header Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
