--- a/TX/TX/TX.vcxproj.filters
+++ b/TX/TX/TX.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="..\..\..\RX5\RX\RX\Sarray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\RX5\RX\RX\SysConfig.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Button.cpp">
